--- a/client/partials/continent.html
+++ b/client/partials/continent.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="timeline-cont col-sm-12">
-    <h4>Trade exchanges by {{entities.sourceEntity.selected.RICname}}, {{minDate}} – {{maxDate}}, in {{actualCurrency}}</h4>
+    <h4>Sum of partners Trade flows for {{entities.sourceEntity.selected.RICname}}, {{minDate}} – {{maxDate}}, in {{actualCurrency}}</h4>
     <div stacked-timeline-continent></div>
     <div missing></div>
   </div>
