Fix #36 - adding a name order in country view

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -41,6 +41,7 @@
           <label class="btn btn-sm btn-default" ng-model="order" btn-radio="'tot'" uncheckable>total</label>
           <label class="btn btn-sm btn-default" ng-model="order" btn-radio="'imp'" uncheckable>imports</label>
           <label class="btn btn-sm btn-default" ng-model="order" btn-radio="'exp'" uncheckable>exports</label>
+          <label class="btn btn-sm btn-default" ng-model="order" btn-radio="'name'" uncheckable>name</label>
         </div>
         <p class="filter">currency</p>
         <div class="btn-group radio-country">
