separate world agregates from geographical areas in partners select

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -100,6 +100,12 @@
             <div ng-bind-html="item.RICname | highlight: $select.search"></div>
           </choices>
         </ui-select>
+        <ui-select ng-model="entities.sourceWorldEntity.selected" theme="bootstrap">
+          <match placeholder="Select a World aggregate...">{{$select.selected.RICname}}</match>
+          <choices repeat="item in reportingWorldEntities | filter: $select.search">
+            <div ng-bind-html="item.RICname | highlight: $select.search"></div>
+          </choices>
+        </ui-select>
       </div>
     </div>
     <div class="row">
