--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -111,7 +111,7 @@
     </div>
     <div class="row">
       <div class="col-sm-12">
-        <p class="filter">selected parteners:</p>
+        <p class="filter">selected partners:</p>
         <div list-world></div>
       </div>
     </div>
