Fix #33 - CSV export now exports full data

--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -138,6 +138,9 @@
     <button type="button" class="btn" ng-model="viewTable" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
         Show/Hide data table
     </button>
+    <button type="button" ng-click="download()" class="btn">
+        Download data
+    </button>
   </div>
 </div>
 <div ng-if="viewTable" class="row table-cont">
