--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="timeline-cont col-sm-12">
     <h4>Trade flows between {{entities.sourceEntity.selected.RICname}} and {{entities.targetEntity.selected.RICname}}, {{minDate}} – {{maxDate}}, reported by {{entities.sourceEntity.selected.RICname}}, in {{actualCurrency}}</h4>
-    <div brushable-timeline></div>
+    <dual-timeline></dual-timeline>
     <div missing></div>
   </div>
 </div>
