--- a/client/css/style.css
+++ b/client/css/style.css
@@ -217,6 +217,69 @@ body > .container {
   padding: 10px 20px;
 }
 
+/* inline selector */
+
+.inline-select, .inline-select .ui-select-bootstrap{
+  display: inline-block;
+}
+
+.inline-select input{
+  display: inline;
+}
+
+.inline-select .ui-select-bootstrap button{
+  padding-right: 30px;
+  font-size: 16px;
+}
+
+.inline-select .btn, .inline-select .form-control{
+  border: 0;
+  border-radius: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  color: #999;
+  /*width: 220px;*/
+  /*min-height: 70px;*/
+  background-color: #FAFAFA;
+}
+
+.inline-select .btn:hover{
+  background-color: #FFF;
+}
+
+.inline-select *:focus, .inline-select *:active:focus{
+  outline: 0;
+}
+
+.inline-select .dropdown-menu{
+  border-color:#e7e7e7;
+  border-radius: 0;
+  border-width: 0 1px 1px 1px;
+  font-size: 13px; 
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  min-width: 294px;
+  left: -16px;
+}
+
+.inline-select .dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus{
+  color: #222;
+  background-color: #e8e8e8;
+}
+
+.inline-select  .dropdown-menu > li > a {
+  padding: 10px 20px;
+}
+
+/*
+.inline-select .ui-select-bootstrap > .ui-select-choices{
+  width: 300px;
+}
+
+.inline-select .dropdown-menu{
+  margin: 10px 0 0 -155px;
+}*/
+
 /* timeline */
 
 .timeline-cont{
