--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -1,11 +1,14 @@
 <div class="row">
 	<div class="timeline-cont col-sm-12">
-    <h4>Trade flows between {{entities.sourceEntity.selected.RICname}} and {{entities.targetEntity.selected.RICname}}, {{minDate}} – {{maxDate}}, reported by {{entities.sourceEntity.selected.RICname}}, in {{actualCurrency}}</h4>
+    <!-- <h4>Trade flows between {{entities.sourceEntity.selected.RICname}} and {{entities.targetEntity.selected.RICname}}, {{minDate}} – {{maxDate}}, reported by {{entities.sourceEntity.selected.RICname}}, in {{actualCurrency}}</h4> -->
+    <h6>Monitoring: source selected = {{entities.sourceEntity.selected.RICid}} ; target selected = {{entities.targetEntity.selected.RICid}}</h6>
+    <bilateral-title></bilateral-title>
     <dual-timeline></dual-timeline>
-    <div missing></div>
+    <chart-of-missing></chart-of-missing>
+    <brushing-timeline></brushing-timeline>
   </div>
 </div>
-<div class="row">
+<!-- <div class="row">
   <div class="col-sm-3">
     <h3 class="subtitle">choose a reporting country:</h3>
   </div>
@@ -40,7 +43,7 @@
     </choices>
   </ui-select>
   </div>
-</div>
+</div> -->
 <div class="row">
   <div class="col-sm-12 text-center shdt">
     <button type="button" class="btn" ng-model="viewTable" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
