explicit state un controller + fix
ui-select does not deal with lists of numbers, this commit includes a
turnaround

--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -4,8 +4,10 @@
       TEMPORARY MONITORING
       <br>Source selected = {{entities.sourceEntity.selected.RICid}}
       <br>Target selected = {{entities.targetEntity.selected.RICid}}
-      <br>Min Date = {{minDate}}
-      <br>Max Date = {{maxDate}}
+      <br>Data Min Date = {{rawMinDate}}
+      <br>Data Max Date = {{rawMaxDate}}
+      <br>Selected Min Date = {{selectedMinDate}}
+      <br>Selected Max Date = {{selectedMaxDate}}
     </h6>
     <bilateral-title></bilateral-title>
     <dual-timeline></dual-timeline>
