--- a/client/partials/bilateralTitle.html
+++ b/client/partials/bilateralTitle.html
@@ -4,7 +4,7 @@
   with
   <inline-select-country ng-model="entities.targetEntity.selected" list="reportingEntities"></inline-select-country>
   - From
-  <inline-select-year ng-model="minDate" list="yearsRange"></inline-select-year>
+  <inline-select-year ng-model="selectedMinDate" list="rawYearsRange_forInf"></inline-select-year>
   to
-  <inline-select-year ng-model="maxDate" list="yearsRange"></inline-select-year>
+  <inline-select-year ng-model="selectedMaxDate" list="rawYearsRange_forSup"></inline-select-year>
 </h4>
