--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="timeline-cont col-sm-12">
-    <h4>Sum of partners Trade flows for {{entities.sourceEntity.selected.RICname}}, {{minDate}} – {{maxDate}}, in {{actualCurrency}}</h4>
+    <country-title></country-title>
     <div stacked-timeline-country></div>
     <div missing></div>
   </div>
