isolate the other directive scope

--- a/client/partials/bilateral.html
+++ b/client/partials/bilateral.html
@@ -12,8 +12,7 @@
     </h6>
     <bilateral-title></bilateral-title>
     <dual-timeline ng-data="timelineData" start-date="selectedMinDate.value" end-date="selectedMaxDate.value"></dual-timeline>
-    <chart-of-missing></chart-of-missing>
-    <brushing-timeline></brushing-timeline>
+    <brushing-timeline ng-data="timelineData" start-date="selectedMinDate.value" end-date="selectedMaxDate.value"></dual-timeline>
   </div>
 </div>
 <!-- <div class="row">
