--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="timeline-cont col-sm-12">
     <country-title></country-title>
-    <div stacked-timeline-country></div>
+    <dual-timeline ng-data="timelineData" start-date="selectedMinDate.value" end-date="selectedMaxDate.value"></dual-timeline>
     <div missing></div>
   </div>
 </div>
