--- a/client/partials/country.html
+++ b/client/partials/country.html
@@ -1,8 +1,9 @@
 <div class="row">
 	<div class="timeline-cont col-sm-12">
     <country-title></country-title>
-    <dual-timeline ng-data="timelineData" start-date="selectedMinDate.value" end-date="selectedMaxDate.value"></dual-timeline>
-    <div missing></div>
+    <dual-timeline ng-data="timelineData" start-date="selectedMinDate" end-date="selectedMaxDate"></dual-timeline>
+    <!-- <div missing></div> -->
+    <brushing-timeline ng-data="timelineData" start-date="selectedMinDate" end-date="selectedMaxDate" raw-start-date="rawMinDate" raw-end-date="rawMaxDate"></brushing-timeline>
   </div>
 </div>
 <div class="row">
