--- a/client/partials/countryTitle.html
+++ b/client/partials/countryTitle.html
@@ -1,3 +1,9 @@
 <h4>
-  Sum of partners Trade flows for {{entities.sourceEntity.selected.RICname}}, {{minDate}} – {{maxDate}}, in {{actualCurrency}}
+  Sum of partners Trade flows for
+  <inline-select-country ng-model="entities.sourceEntity.selected" list="reportingCountryEntities"></inline-select-country>
+  ,&nbsp;
+  <inline-select-year ng-model="selectedMinDate" list="rawYearsRange_forInf"></inline-select-year>
+  &nbsp;–&nbsp;
+  <inline-select-year ng-model="selectedMaxDate" list="rawYearsRange_forSup"></inline-select-year>
+  , in {{actualCurrency}}
 </h4>
