Better formatting for country view title

--- a/client/partials/countryTitle.html
+++ b/client/partials/countryTitle.html
@@ -1,9 +1,9 @@
 <h4>
   Sum of partners Trade flows for
   <inline-select-country ng-model="entities.sourceEntity.selected" list="reportingCountryEntities"></inline-select-country>
-  ,&nbsp;
+  from
   <inline-select-year ng-model="selectedMinDate" list="rawYearsRange_forInf"></inline-select-year>
-  &nbsp;–&nbsp;
+  to
   <inline-select-year ng-model="selectedMaxDate" list="rawYearsRange_forSup"></inline-select-year>
-  , in {{actualCurrency}}
+  in {{actualCurrency}}
 </h4>
