--- a/client/partials/countryTitle.html
+++ b/client/partials/countryTitle.html
@@ -1,6 +1,6 @@
 <h4>
   Sum of partners Trade flows for
-  <inline-select-country ng-model="entities.sourceEntity.selected" list="reportingCountryEntities"></inline-select-country>
+  <inline-select-country ng-model="entities.sourceEntity.selected" list="reportingEntities"></inline-select-country>
   from
   <inline-select-year ng-model="selectedMinDate" list="rawYearsRange_forInf"></inline-select-year>
   to
